apps/treasure/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treasure-frontend
  namespace: treasure
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: treasure-frontend
